# flaskgpt

./: app.py  pyproject.toml
static/src/css/: input.css
static/src/js/: script.js
templates/: index.html
