[tool.poetry]
name = "flaskgpt"
version = "0.1.0"
description = "ChatGPT Clone using Flask"
authors = ["MrShadowsWolf <loup.thevenin.1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
openai = "^0.28.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
